Fixed visibility of left bar icons

--- a/home-page/src/components/LeftBar.css
+++ b/home-page/src/components/LeftBar.css
@@ -18,6 +18,14 @@
     width: 2rem;
 }
 
+.svg-icon{
+    transition: transform 0.15s;
+}
+
+.svg-container:hover .svg-icon{
+    transform: translateY(-5px);
+}
+
 .svg-path {
     transition: stroke 0.3s;
 }
@@ -26,13 +34,7 @@
     stroke: #FF5A5F;
 }
 
-.svg-icon{
-    transition: transform 0.3s;
-}
 
-.svg-container:hover .svg-icon{
-    transform: translateY(-5px);
-}
 
 .vertical-line {
     margin-top: 20px;
